--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -26,8 +26,14 @@
   font-size: 20px;
 }
 
+.navSection {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
 /* Sign In Section */
-.signInSection {
+.navItem {
   color: var(--white);
   background-color: var(--primary-color);
   padding: 5px 15px;
@@ -38,7 +44,7 @@
 }
 
 /* Hover Effect for Sign In Section */
-.signInSection:hover {
+.navItem:hover {
   background-color: var(--white);
   color: var(--primary-color);
 }
@@ -50,7 +56,7 @@
     text-align: center;
   }
 
-  .signInSection {
+  .navItem {
     margin-top: 10px;
   }
 }
