Login and Register Working, practice register TODO, email sending WIP

--- a/src/components/UserLoginForm/UserLoginForm.module.css
+++ b/src/components/UserLoginForm/UserLoginForm.module.css
@@ -48,3 +48,15 @@
 .button:hover {
   background-color: var(--secondary-color);
 }
+
+.error {
+  color: red;
+  font-size: 14px;
+  text-align: left;
+}
+
+.formError {
+  color: red;
+  font-size: 14px;
+  text-align: center;
+}
