--- a/src/app/forgot-password/ForgotPasswordPage.module.css
+++ b/src/app/forgot-password/ForgotPasswordPage.module.css
@@ -1,7 +1,8 @@
 .formWrapper {
-  max-width: 400px;
+  max-width: 650px;
+  min-height: 250px;
   width: 100%;
-  margin: 0 auto;
+  margin: 10vh auto;
   padding: 20px;
   text-align: center;
   background-color: #f9f9f9;
@@ -43,6 +44,7 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-top: 5px;
 }
 
 .button:hover {
@@ -53,10 +55,50 @@
   color: red;
   font-size: 14px;
   text-align: left;
+  margin: 0;
+  padding: 0;
+}
+.successMessage {
+  text-align: center;
+  margin-top: 20px;
 }
 
-.formError {
-  color: red;
+.successMessage p {
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.successMessage .button {
+  margin-top: 20px;
+}
+
+.backToSignIn {
+  margin-top: 10px;
   font-size: 14px;
-  text-align: center;
+}
+
+.backToSignIn a {
+  color: var(--secondary-color);
+  text-decoration: none;
+  font-weight: 600;
+  transition: color 0.3s;
+}
+
+.backToSignIn a:hover {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .formWrapper {
+    max-width: 90%;
+    padding: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .formWrapper {
+    max-width: 95%;
+    padding: 12px;
+  }
 }
