--- a/src/components/UserLoginForm/UserLoginForm.module.css
+++ b/src/components/UserLoginForm/UserLoginForm.module.css
@@ -60,3 +60,20 @@
   font-size: 14px;
   text-align: center;
 }
+
+.forgotPassword {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.forgotPassword a {
+  color: var(--secondary-color);
+  text-decoration: none;
+  font-weight: 600;
+  transition: color 0.3s;
+}
+
+.forgotPassword a:hover {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
