--- a/src/app/admin-panel/AdminPanelPage.module.css
+++ b/src/app/admin-panel/AdminPanelPage.module.css
@@ -1,10 +1,10 @@
-/* app/admin-panel/AdminPanel.module.css */
+/* app/admin-panel/AdminPanelPage.module.css */
 .container {
   padding: 20px;
 }
 
-.boxesContainer {
+.cardsContainer {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
+  flex-wrap: wrap;
 }
