feat(cal): Booked filter and Toast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #007bff;
+  --primary-color-dark: #0056b3;
   --secondary-color: #84888b;
   --white: #ffffff;
   --font-family: 'Arial, sans-serif';
