--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top: 60px; /* Default desktop banner height */
 }
 
 * {
