--- a/src/app/my-appointments/MyAppointmentsPage.module.css
+++ b/src/app/my-appointments/MyAppointmentsPage.module.css
@@ -36,6 +36,17 @@
   padding: 2rem 1rem;
 }
 
+.section {
+  margin-bottom: 2rem;
+}
+
+.sectionTitle {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  color: #000;
+}
+
 .appointmentsList {
   display: flex;
   flex-direction: column;
@@ -46,6 +57,13 @@
   text-align: center;
   font-size: 1.2rem;
   color: #666;
+  padding: 1rem;
+}
+
+.error {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #d32f2f;
   padding: 2rem;
 }
 
@@ -72,5 +90,9 @@
   .subtitle {
     font-size: 0.875rem;
     margin-left: 2.5vw;
+  }
+
+  .sectionTitle {
+    font-size: 1.25rem;
   }
 }
